wayshub/wayshub-fe-kube/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wayshub-frontend
  namespace: wayshub
spec:
  type: ClusterIP
  selector:
    app: wayshub-frontend
  ports:
    - port: 80
      targetPort: 80
